samples/_failures_safe/1761646992_aeae7e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b36906c.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_2b36906c.c:174:14: error: ‘TOKEN_’ undeclared (first use in this function)
  174 |         case TOKEN_
      |              ^~~~~~
./samples/SAFE/__tmp_2b36906c.c:174:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_2b36906c.c:174:9: error: expected ‘:’ or ‘...’ at end of input
  174 |         case TOKEN_
      |         ^~~~
./samples/SAFE/__tmp_2b36906c.c:174:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2b36906c.c:174:9: error: expected declaration or statement at end of input
